# gtfs-rs

./: .gitignore  Cargo.toml  build.rs
gtfs-macros/: Cargo.toml
gtfs-macros/src/: lib.rs
proto/: gtfs.proto  mta-gtfs.proto
src/: error.rs  lib.rs  realtime.rs  schedule.rs
src/realtime/: models.rs  models_mta.rs  parse.rs
src/schedule/: models.rs  parse.rs  zip.rs
test_data/realtime/: 1234567S  ace  bdfm  g  jz  l  nqrw  sir
